# Backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yaml  pyproject.toml  requirements.txt
app/: database.py  main.py  router.py
app/core/: config.py
app/users/: crud.py  jwtauth.py  models.py  schemas.py
app/users/api/: v1.py
