[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["TianaNanta <andrianjakananta@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.96.0"}
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^11.0.0"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
aiomysql = "^0.1.1"
a2wsgi = "^1.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.3.2"
mypy = "^1.3.0"
black = "^23.3.0"
pytest-cov = "^4.1.0"
manage-fastapi = "^1.1.1"
ruff = "^0.0.272"

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.ruff]
# Increase the maximum line length to 90 characters.
line-length = 90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
